@@ -1,7 +1,7 @@
 Package: sfsmisc
 Title: Utilities from Seminar fuer Statistik ETH Zurich
 Version: 1.0-27
-Date: 2014-10-17
+Date: 2015-01-05
 Author: Martin Maechler et al.
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
 Description: Useful utilities ['goodies'] from Seminar fuer Statistik ETH
